# redact-shot-x

./: .gitignore  README.md  api-aarch64-apple-darwin.spec  api-x86_64-apple-darwin.spec  api-x86_64-pc-windows-msvc.spec  api-x86_64-unknown-linux-gnu.spec  api.spec  build.bat  build.py  build.sh  generate_icons.py  index.html  main.py  package.json  pnpm-lock.yaml  redactshotx.spec  run-app.sh  run-dev.sh  run-web-app.bat  run-web-app.sh  run-web.sh  runtime_hook.py  start-api-server.bat  start-api-server.sh  vite.config.ts  vite.web.config.ts
assets/: README.md  icon.icns
backend/: README.md  __init__.py  api.py  pyproject.toml  redactor.py
frontend/: App.css  App.tsx  constants.ts  index.html  main.tsx  python_api.ts
frontend/components/: ActionButtons.tsx  BlurBrush.tsx  BulkImageGallery.tsx  DropZone.tsx  Footer.tsx  Header.tsx  ImagePreview.tsx  ImagePreviewBase.tsx  ImagePreviewModal.tsx  ImageTools.css  ImageTools.tsx  RedactionOptions.tsx  SettingsModal.tsx
frontend/services/: api.ts
frontend/utils/: blurUtils.ts  imageUtils.ts
scripts/: Dockerfile.linux  build-linux.sh  build-sidecar.bat  build-sidecar.sh  build-win.sh  check-sidecar.sh  cleanup.sh
src/: App.css  App.tsx  constants.ts  main.tsx  python_api.ts  rust_api.ts
src-python/: README.md  api-last-version.py  api-old.py  api.py  api.spec  build.py  pyproject.toml  redactor-last-version.py  redactor.py  redactor.spec  redactshotx.spec  requirements.txt
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  redactor.rs
src/components/: AdvancedOptions.tsx  DropZone.tsx  Header.tsx  IconButton.tsx  ImagePreview.tsx  SettingsModal.tsx  SettingsTabs.tsx
src/services/: api.ts
