[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redactshotx"
version = "0.1.0"
description = "RedactShotX - Image Redactor with Presidio"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "numpy==2.2.4",
    "spacy==3.8.2",
    "presidio-analyzer==2.2.358",
    "presidio-image-redactor==0.0.56",
    "Pillow>=11.2.1",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20"
]

[tool.setuptools]
packages = []
py-modules = ["redactor", "api"]
