[package]
name = "redact-shot-x"
version = "0.1.0"
description = "RedactShotX - Redact images with AI"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "redact_shot_x_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["config-json", "codegen"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
once_cell = "1.19"
ctrlc = "3.4.0"
tokio = { version = "1.44", features = ["rt", "time"] }

# Image processing and redaction
image = "0.24.7"
base64 = "0.21.5"
tempfile = "3.8.1"
regex = "1.10.2"
uuid = { version = "1.5.0", features = ["v4"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

